package com.ben.abstractnotification;

public interface Notification {
    String notifyUser();
}
